[metadata]
name = SimpleSinglyLinkedList
version = 1.0.0
author = Shahll
author_email = shahll.git@gmail.com
description = package for singly linked list manipulations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Shahll/SimpleSinglyLinkedList
project_urls =
    Bug Tracker = https://github.com/Shahll/SimpleSinglyLinkedList/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
